# property_manager-backend

./: .env.production  .gitignore  Dockerfile  Makefile  README.md  app.py  cleanup.sh  config.py  db.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  utils.py
auth/: api.py  models.py  schemas.py  services.py
frontend/: api.py
images/: api.py  models.py  schemas.py
listings/: __init__.py  api.py
properties/: __init__.py  api.py
test_suite/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt
test_suite/fixtures/: __init__.py  conftest.py  mock_responses.py  test_data.py
test_suite/integration/: __init__.py  test_api_endpoints.py  test_auth_flow.py  test_database.py
test_suite/unit/: __init__.py  test_auth_api.py  test_auth_schemas.py  test_auth_services.py  test_config.py  test_frontend_api.py
users/: __init__.py  api.py  models.py  schemas.py  services.py
